--- a/package.json
+++ b/package.json
@@ -1,1 +1,29 @@
-
+{
+  "name": "fec-booking-module",
+  "version": "1.0.0",
+  "description": "airbnb booking module for Hack Reactor FEC",
+  "main": "index.js",
+  "scripts": {
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js"
+  },
+  "author": "Jane Lee",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.0",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.9.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
+}
